@@ -1096,7 +1096,6 @@ namespace FeatureAdmin
                 logDateMsg("ERROR: Feature Collection was empty!");
                 return false;
             }
-            int faultyCompatibilityLevel = 0;
 
             // string DBName = string.Empty; // tbd: retrieve the database name of the featureCollection
             string featuresName = features.ToString();
@@ -1111,10 +1110,14 @@ namespace FeatureAdmin
                     {
                         string location = LocationInfo.SafeDescribeObject(feature.Parent);
 
-                        string msgString = "Faulty Feature found! Id: '" + feature.DefinitionId.ToString();
-                        if (faultyCompatibilityLevel != FeatureManager.COMPATINAPPLICABLE)
+                        string msgString = "Faulty Feature found! Id=" + feature.DefinitionId.ToString();
+#if SP2013
+                        msgString += " Activation=" + feature.TimeActivated.ToString("yyyy-MM-dd");
+#endif
+                        string solutionInfo = GetFeatureSolutionInfo(feature);
+                        if (!string.IsNullOrEmpty(solutionInfo))
                         {
-                            msgString += " CompatibilityLevel:" + faultyCompatibilityLevel + " (0=Error)";
+                            msgString += solutionInfo;
                         }
                         msgString += Environment.NewLine
                             + "Found in " + location + "." + Environment.NewLine
@@ -1148,6 +1151,41 @@ namespace FeatureAdmin
                 return false;
             }
             return false;
+        }
+        private string GetFeatureSolutionInfo(SPFeature feature)
+        {
+            string text = "";
+            try
+            {
+                if (feature.Definition != null
+                    && feature.Definition.SolutionId != Guid.Empty)
+                {
+                    text = string.Format("SolutionId={0}", feature.Definition.SolutionId);
+                    SPSolution solution = SPFarm.Local.Solutions[feature.Definition.SolutionId];
+                    if (solution != null)
+                    {
+                        try
+                        {
+                            text += string.Format(", SolutionName='{0}'", solution.Name);
+                        }
+                        catch { }
+                        try
+                        {
+                            text += string.Format(", SolutionDisplayName='{0}'", solution.DisplayName);
+                        }
+                        catch { }
+                        try
+                        {
+                            text += string.Format(", SolutionDeploymentState='{0}'", solution.DeploymentState);
+                        }
+                        catch { }
+                    }
+                }
+            }
+            catch
+            {
+            }
+            return text;
         }
 
         #endregion
